--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: backend
     build:
       context: .
-      dockerfile: docker/dev.Dockerfile
+      dockerfile: docker/backend/Dockerfile
       # TODO: Try using cache_from pointed at a Docker Hub image built from master
       # Though may need to also use the workaround for local vs remote:
       # https://github.com/moby/moby/issues/32612#issuecomment-294055017
@@ -32,8 +32,6 @@ services:
     stop_signal: SIGINT
     # https://github.com/SeleniumHQ/docker-selenium#running-the-images
     shm_size: 2g
-    volumes:
-      - .:/app
     ports:
       - '8000:8000'
     depends_on:
@@ -45,19 +43,15 @@ services:
 
   frontend:
     container_name: frontend
-    # https://hub.docker.com/_/node
-    image: node:12.13.1-alpine
+    build:
+      context: .
+      dockerfile: docker/backend/Dockerfile
+    image: treeherder-frontend
     environment:
       # Allows `.neutrinorc.js` to adjust filesystem watching and browser opening behaviour.
       - IN_DOCKER=1
-    # Installing JS dependencies at runtime so that they share the `node_modules` from the
-    # host, improving speed (both install and build due to the webpack cache) and ensuring
-    # the host copy stays in sync (for people that switch back and forth between UI-only
-    # and full stack Treeherder development).
     working_dir: /app
     command: sh -c "yarn && yarn start --env.BACKEND=http://backend:8000 --host 0.0.0.0"
-    volumes:
-      - .:/app
     ports:
       - '5000:5000'
 
